bugs/tests/fuzz-05-18-13-21-59/r_744_r_175_issue3288_F10_P175_10_M1.stderr
likely_hits/r_744_r_175_issue3288_F10_P175_10_M1.p4(1): [--Werror=type-error] error: Cannot apply ! to value ... of type ANYTYPE
enum bit<8> E { a = +!... };
                      ^^^
likely_hits/r_744_r_175_issue3288_F10_P175_10_M1.p4(1): [--Werror=type-error] error: Cannot apply ! to value ... of type ANYTYPE
enum bit<8> E { a = +!... };
                      ^^^
likely_hits/r_744_r_175_issue3288_F10_P175_10_M1.p4(1): [--Werror=type-error] error: Error while analyzing !...
enum bit<8> E { a = +!... };
                     ^^^^
In file: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172
Compiler Bug: /p4c/frontends/p4/typeChecking/typeChecker.cpp:172: Null srcType

